# aoc-rs

./: .gitignore  Cargo.toml  README.md
2021/01/: Cargo.toml
2021/01/src/: 01.rs
2021/02/: Cargo.toml
2021/03/: Cargo.toml
2021/04/: Cargo.toml
2021/05/: Cargo.toml
2021/06/: Cargo.toml
2021/07/: Cargo.toml
2021/08/: Cargo.toml
2021/09/: Cargo.toml
2021/10/: Cargo.toml
2021/11/: Cargo.toml
2021/12/: Cargo.toml
2021/13/: Cargo.toml
2021/14/: Cargo.toml
2021/15/: Cargo.toml
2021/16/: Cargo.toml
2021/17/: Cargo.toml
2021/18/: Cargo.toml
2021/19/: Cargo.toml
2021/20/: Cargo.toml
2021/21/: Cargo.toml
2021/25/: Cargo.toml
2022/01/: Cargo.toml
2022/02/: Cargo.toml
2022/03/: Cargo.toml
2022/04/: Cargo.toml
2022/05/: Cargo.toml
2022/06/: Cargo.toml
2022/07/: Cargo.toml
2022/08/: Cargo.toml
2022/09/: Cargo.toml
2022/10/: Cargo.toml
2022/11/: Cargo.toml
2022/12/: Cargo.toml
2022/13/: Cargo.toml
2022/14/: Cargo.toml
2022/15/: Cargo.toml
2022/16/: Cargo.toml
2022/17/: Cargo.toml
2022/18/: Cargo.toml
2022/20/: Cargo.toml
2022/21/: Cargo.toml
2022/22/: Cargo.toml
2022/25/: Cargo.toml
2023/01/: Cargo.toml
2023/02/: Cargo.toml
2023/03/: Cargo.toml
2023/04/: Cargo.toml
2023/05/: Cargo.toml
2023/06/: Cargo.toml
2023/07/: Cargo.toml
2023/08/: Cargo.toml
2023/09/: Cargo.toml
2023/10/: Cargo.toml
2023/11/: Cargo.toml
2023/12/: Cargo.toml
2023/13/: Cargo.toml
2023/14/: Cargo.toml
2023/15/: Cargo.toml
2023/16/: Cargo.toml
2024/01/: Cargo.toml
2024/02/: Cargo.toml
2024/03/: Cargo.toml
2024/04/: Cargo.toml
(+181 files in other folders)
