[workspace]
members = ["2022/01", "2022/02", "2023/01", "2023/02", "2023/03", "2023/04", "2023/05", "2023/06", "2023/07", "2023/08", "2023/09", "2023/10", "2023/11", "2023/12", "2023/13", "2023/14", "2023/15", "2022/03", "2022/04", "2022/05", "2022/06", "2022/07", "2022/08", "2022/09", "2022/10", "2022/11", "2022/12", "2022/13", "2022/14", "2022/15", "2022/16", "2022/17", "2022/18", "2022/19", "2022/20", "2022/21", "2022/22", "2022/25", "2024/01", "2024/02", "2024/03", "2024/04", "2024/05", "2024/06", "2024/07", "2022/24", "2024/08", "2024/09", "2024/10", "2024/11", "2024/12", "2024/13", "2024/14", "2024/15", "2024/16", "2024/17"]
resolver = "2"
